<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">聚源投研助手</string>
    <string name="inner_report">内部报告</string>
    <string name="outer_report">外部报告</string>
    <string name="no_reports">没有报告</string>
    <string name="mock_reports">"{reports:[{date:'2011-12-31 10:00:00',title:'aaaaa',investRanking:'买入',author:['张三','李四'],broker:'招商证券',id:12345,stockName:'深发展',stockCode:'000001',industryCode:'111010',industryName:'种子行业',rankChange:'上调',score:5,summary:'摘要内容',favorite:true,read:true}]}"</string>
    <string name="user_name">用户名\u0020\u0020\u0020\u0020</string>
    <string name="password">密码\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020</string>
    <string name="product_customer">产品客户</string>
    <string name="mock_login_servers">"{customers:[{customerName:'银华基金',url:'http://oa.yhfund.com.cn:8070/investerminal'},{customerName:'兴业基金',url:'http://218.80.247.123/investerminal'},{customerName:'理成资产',url:'http://www.smilestone.com.cn:8180/investerminal'},{customerName:'纽银基金',url:'http://210.5.155.202:8080/investerminal'},{customerName:'中邮证券',url:'http://211.156.220.79:8080/investerminal'},{customerName:'聚源测试',url:'http://irpcenter.gildata.com/investerminal'}]}"</string>
    <string name="care_report">我的订阅</string>
    <string name="login_button">登录</string>
    <string name="proxy_host">代理</string>
    <string name="proxy_port">端口</string>
    <string name="proxy_user_name">用户</string>
    <string name="proxy_password">密码</string>
    <string name="configuration_button">选项</string>

</resources>